update bib file, remove line numbers

--- a/TYCxray.tex
+++ b/TYCxray.tex
@@ -1,19 +1,5 @@
-    % Tasks:
-% Put in estimate of galactic NH (Moritz)
-% Dickey and Lockman, 1990, Annu. Rev. Astron. Astrophys., 28, 215
-% get: 1.73 e20 - maybe plot second model with nh fixed? - plot done, but not yet included
-% Get TESS lightcurve to check for variability (MMax) - done
-% Is a jet reasonable (eqn 6) (Moritz to put some numbers in)
-% Arcus simulations (Moritz)
-% Check if X-East and X-West coincide with GAIA sources (i.e. they are foreground stars) - good hint from Christian (Moritz) - done. No GAIA DR2 or 2MASS sources are close to X-East and X-North.
-% Consolidate discussion on shock physics - mostly done
-% discuss variability and magnetic field
-% plot of L_X / L_bol for some classes of objects. What's the other axis? rosby number? Age? Period? - done (Fig. 5)
-
-
-
 %% using aastex version 6.3
-\documentclass[linenumbers]{aastex631}
+\documentclass{aastex631}
 \usepackage{amsmath}
 \usepackage{amssymb}
 
