--- a/bib.bib
+++ b/bib.bib
@@ -1,22 +1,12 @@
-@BOOK{1967pswh.book.....Z,
-       author = {{Zel'dovich}, Ya. B. and {Raizer}, Yu. P.},
-        title = "{Physics of shock waves and high-temperature hydrodynamic phenomena}",
-         year = 1967,
-       adsurl = {https://ui.adsabs.harvard.edu/abs/1967pswh.book.....Z},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@BOOK{1986rpa..book.....R,
-       author = {{Rybicki}, George B. and {Lightman}, Alan P.},
-        title = "{Radiative Processes in Astrophysics}",
-         year = 1986,
-       adsurl = {https://ui.adsabs.harvard.edu/abs/1986rpa..book.....R},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-
 @string{june = {June}}
+
+@book{1967pswh.book.....Z,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/1967pswh.book.....Z},
+ author = {{Zel'dovich}, Ya. B. and {Raizer}, Yu. P.},
+ title = {{Physics of shock waves and high-temperature hydrodynamic phenomena}},
+ year = {1967}
+}
 
 @article{1979ApJ...228..939C,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -31,80 +21,14 @@
  volume = {228},
  year = {1979}
 }
-@ARTICLE{2003ApJ...588..696M,
-       author = {{Moretti}, A. and {Campana}, S. and {Lazzati}, D. and {Tagliaferri}, G.},
-        title = "{The Resolved Fraction of the Cosmic X-Ray Background}",
-      journal = {\apj},
-     keywords = {Cosmology: Observations, Cosmology: Diffuse Radiation, Surveys, X-Rays: Diffuse Background, X-Rays: General, Astrophysics},
-         year = 2003,
-        month = may,
-       volume = {588},
-       number = {2},
-        pages = {696-703},
-          doi = {10.1086/374335},
-archivePrefix = {arXiv},
-       eprint = {astro-ph/0301555},
- primaryClass = {astro-ph},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...588..696M},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+
+@book{1986rpa..book.....R,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/1986rpa..book.....R},
+ author = {{Rybicki}, George B. and {Lightman}, Alan P.},
+ title = {{Radiative Processes in Astrophysics}},
+ year = {1986}
 }
-
-@ARTICLE{2009A&A...493..579G,
-       author = {{G{\"u}nther}, H.~M. and {Matt}, S.~P. and {Li}, Z. -Y.},
-        title = "{Revealing the fastest component of the DG Tauri outflow through X-rays}",
-      journal = {\aap},
-     keywords = {stars: formation, stars: winds, outflows, stars:, individual: DG Tau, stars: mass-loss, Astrophysics},
-         year = 2009,
-        month = jan,
-       volume = {493},
-       number = {2},
-        pages = {579-584},
-          doi = {10.1051/0004-6361:200810886},
-archivePrefix = {arXiv},
-       eprint = {0811.1666},
- primaryClass = {astro-ph},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2009A&A...493..579G},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{2003ApJ...582.1032J,
-       author = {{Jura}, M.},
-        title = "{A Flared, Orbiting, Dusty Disk around HD 233517}",
-      journal = {\apj},
-     keywords = {Stars: Circumstellar Matter, Stars: Mass Loss, Astrophysics},
-         year = 2003,
-        month = jan,
-       volume = {582},
-       number = {2},
-        pages = {1032-1035},
-          doi = {10.1086/344704},
-archivePrefix = {arXiv},
-       eprint = {astro-ph/0209272},
- primaryClass = {astro-ph},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...582.1032J},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-@ARTICLE{2014ApJ...796...24P,
-       author = {{Primini}, F.~A. and {Kashyap}, V.~L.},
-        title = "{Determining X-Ray Source Intensity and Confidence Bounds in Crowded Fields}",
-      journal = {\apj},
-     keywords = {methods: data analysis, methods: statistical, X-rays: general, Astrophysics - Instrumentation and Methods for Astrophysics},
-         year = 2014,
-        month = nov,
-       volume = {796},
-       number = {1},
-          eid = {24},
-        pages = {24},
-          doi = {10.1088/0004-637X/796/1/24},
-archivePrefix = {arXiv},
-       eprint = {1410.2564},
- primaryClass = {astro-ph.IM},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2014ApJ...796...24P},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
 
 @article{1990ARA&A..28..215D,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -179,6 +103,42 @@ archivePrefix = {arXiv},
  title = {{The X-Ray Luminosities of Herbig-Haro Objects}},
  volume = {576},
  year = {2002}
+}
+
+@article{2003ApJ...582.1032J,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...582.1032J},
+ archiveprefix = {arXiv},
+ author = {{Jura}, M.},
+ doi = {10.1086/344704},
+ eprint = {astro-ph/0209272},
+ journal = {\apj},
+ keywords = {Stars: Circumstellar Matter, Stars: Mass Loss, Astrophysics},
+ month = {January},
+ number = {2},
+ pages = {1032-1035},
+ primaryclass = {astro-ph},
+ title = {{A Flared, Orbiting, Dusty Disk around HD 233517}},
+ volume = {582},
+ year = {2003}
+}
+
+@article{2003ApJ...588..696M,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...588..696M},
+ archiveprefix = {arXiv},
+ author = {{Moretti}, A. and {Campana}, S. and {Lazzati}, D. and {Tagliaferri}, G.},
+ doi = {10.1086/374335},
+ eprint = {astro-ph/0301555},
+ journal = {\apj},
+ keywords = {Cosmology: Observations, Cosmology: Diffuse Radiation, Surveys, X-Rays: Diffuse Background, X-Rays: General, Astrophysics},
+ month = {May},
+ number = {2},
+ pages = {696-703},
+ primaryclass = {astro-ph},
+ title = {{The Resolved Fraction of the Cosmic X-Ray Background}},
+ volume = {588},
+ year = {2003}
 }
 
 @article{2006AJ....131.1163S,
@@ -264,6 +224,24 @@ archivePrefix = {arXiv},
  year = {2008}
 }
 
+@article{2009A&A...493..579G,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2009A&A...493..579G},
+ archiveprefix = {arXiv},
+ author = {{G{\"u}nther}, H.~M. and {Matt}, S.~P. and {Li}, Z. -Y.},
+ doi = {10.1051/0004-6361:200810886},
+ eprint = {0811.1666},
+ journal = {\aap},
+ keywords = {stars: formation, stars: winds, outflows, stars:, individual: DG Tau, stars: mass-loss, Astrophysics},
+ month = {January},
+ number = {2},
+ pages = {579-584},
+ primaryclass = {astro-ph},
+ title = {{Revealing the fastest component of the DG Tauri outflow through X-rays}},
+ volume = {493},
+ year = {2009}
+}
+
 @article{2010ApJ...708.1760G,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...708.1760G},
@@ -299,41 +277,6 @@ archivePrefix = {arXiv},
  volume = {719},
  year = {2010}
 }
-@ARTICLE{Gunn1998,
-       author = {{Gunn}, A.~G. and {Mitrou}, C.~K. and {Doyle}, J.~G.},
-        title = "{On the rotation-activity correlation for active binary stars}",
-      journal = {\mnras},
-     keywords = {STARS: ACTIVITY, BINARIES: CLOSE, STARS: FLARE, STARS: LATE-TYPE, STARS: VARIABLES: OTHER},
-         year = 1998,
-        month = may,
-       volume = {296},
-       number = {1},
-        pages = {150-164},
-          doi = {10.1046/j.1365-8711.1998.01347.x},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/1998MNRAS.296..150G},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-@ARTICLE{Melis_2009,
-       author = {{Melis}, C. and {Zuckerman}, B. and {Song}, Inseok and {Rhee}, Joseph H. and {Metchev}, Stanimir},
-        title = "{A Substantial Dust Disk Surrounding an Actively Accreting First-Ascent Giant Star}",
-      journal = {\apj},
-     keywords = {binaries: close, circumstellar matter, infrared: stars, stars: evolution, stars: individual: TYC 4144 329 1 TYC 4144 329 2, Astrophysics - Solar and Stellar Astrophysics},
-         year = 2009,
-        month = may,
-       volume = {696},
-       number = {2},
-        pages = {1964-1971},
-          doi = {10.1088/0004-637X/696/2/1964},
-archivePrefix = {arXiv},
-       eprint = {0901.4360},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2009ApJ...696.1964M},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
 
 @article{2010ApJ...721.1820M,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -421,6 +364,25 @@ archivePrefix = {arXiv},
  primaryclass = {astro-ph.SR},
  title = {{Recollimation Boundary Layers as X-Ray Sources in Young Stellar Jets}},
  volume = {795},
+ year = {2014}
+}
+
+@article{2014ApJ...796...24P,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2014ApJ...796...24P},
+ archiveprefix = {arXiv},
+ author = {{Primini}, F.~A. and {Kashyap}, V.~L.},
+ doi = {10.1088/0004-637X/796/1/24},
+ eid = {24},
+ eprint = {1410.2564},
+ journal = {\apj},
+ keywords = {methods: data analysis, methods: statistical, X-rays: general, Astrophysics - Instrumentation and Methods for Astrophysics},
+ month = {November},
+ number = {1},
+ pages = {24},
+ primaryclass = {astro-ph.IM},
+ title = {{Determining X-Ray Source Intensity and Confidence Bounds in Crowded Fields}},
+ volume = {796},
  year = {2014}
 }
 
@@ -590,17 +552,19 @@ archivePrefix = {arXiv},
 
 @article{2021arXiv210811234S,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
- adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210811234S},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...655A.116S},
  archiveprefix = {arXiv},
- author = {{Suzuki}, Hiromasa and {Plucinsky}, Paul P. and {Gaetz}, Terrance J. and {Bamba}, Aya},
- eid = {arXiv:2108.11234},
+ author = {{Suzuki}, H. and {Plucinsky}, P.~P. and {Gaetz}, T.~J. and {Bamba}, A.},
+ doi = {10.1051/0004-6361/202141458},
+ eid = {A116},
  eprint = {2108.11234},
- journal = {arXiv e-prints},
- keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics},
- month = {August},
- pages = {arXiv:2108.11234},
+ journal = {\aap},
+ keywords = {methods: data analysis, instrumentation: detectors, X-rays: general, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics},
+ month = {November},
+ pages = {A116},
  primaryclass = {astro-ph.HE},
- title = {{Spatial and Temporal Variations of the Chandra ACIS Particle-Induced Background and Development of a Spectral-Model Generation Tool}},
+ title = {{Spatial and temporal variations of the Chandra ACIS particle-induced background and development of a spectral-model generation tool}},
+ volume = {655},
  year = {2021}
 }
 
@@ -633,6 +597,20 @@ archivePrefix = {arXiv},
  title = {{Simulations of an alpha-effect due to magnetic buoyancy}},
  volume = {338},
  year = {1998}
+}
+
+@misc{Brasseur2019,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019ascl.soft05007B},
+ archiveprefix = {ascl},
+ author = {{Brasseur}, C.~E. and {Phillip}, Carlita and {Fleming}, Scott W. and {Mullally}, S.~E. and {White}, Richard L.},
+ eid = {ascl:1905.007},
+ eprint = {1905.007},
+ keywords = {Software},
+ month = {May},
+ pages = {ascl:1905.007},
+ title = {{Astrocut: Tools for creating cutouts of TESS images}},
+ year = {2019}
 }
 
 @article{Donati+2009,
@@ -677,6 +655,24 @@ Todd},
  url = {https://doi.org/10.5281/zenodo.4428938},
  version = {4.13.0},
  year = {2021}
+}
+
+@article{Feinstein2019,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019PASP..131i4502F},
+ archiveprefix = {arXiv},
+ author = {{Feinstein}, Adina D. and {Montet}, Benjamin T. and {Foreman-Mackey}, Daniel and {Bedell}, Megan E. and {Saunders}, Nicholas and {Bean}, Jacob L. and {Christiansen}, Jessie L. and {Hedges}, Christina and {Luger}, Rodrigo and {Scolnic}, Daniel and {Cardoso}, Jos{\'e} Vin{\'\i}cius de Miranda},
+ doi = {10.1088/1538-3873/ab291c},
+ eprint = {1903.09152},
+ journal = {\pasp},
+ keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+ month = {September},
+ number = {1003},
+ pages = {094502},
+ primaryclass = {astro-ph.IM},
+ title = {{eleanor: An Open-source Tool for Extracting Light Curves from the TESS Full-frame Images}},
+ volume = {131},
+ year = {2019}
 }
 
 @article{Fossati+2015,
@@ -745,6 +741,21 @@ Todd},
  year = {2017}
 }
 
+@article{Gunn1998,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/1998MNRAS.296..150G},
+ author = {{Gunn}, A.~G. and {Mitrou}, C.~K. and {Doyle}, J.~G.},
+ doi = {10.1046/j.1365-8711.1998.01347.x},
+ journal = {\mnras},
+ keywords = {STARS: ACTIVITY, BINARIES: CLOSE, STARS: FLARE, STARS: LATE-TYPE, STARS: VARIABLES: OTHER},
+ month = {May},
+ number = {1},
+ pages = {150-164},
+ title = {{On the rotation-activity correlation for active binary stars}},
+ volume = {296},
+ year = {1998}
+}
+
 @article{harris2020array,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2020Natur.585..357H},
@@ -794,6 +805,42 @@ Todd},
  title = {{Common envelope evolution: where we stand and how we can move forward}},
  volume = {21},
  year = {2013}
+}
+
+@misc{lightkurve,
+ adsurl = {http://adsabs.harvard.edu/abs/2018ascl.soft12013L},
+ archiveprefix = {ascl},
+ author = {{Lightkurve Collaboration} and {Cardoso}, J.~V.~d.~M. and
+{Hedges}, C. and {Gully-Santiago}, M. and {Saunders}, N. and
+{Cody}, A.~M. and {Barclay}, T. and {Hall}, O. and
+{Sagear}, S. and {Turtelboom}, E. and {Zhang}, J. and
+{Tzanidakis}, A. and {Mighell}, K. and {Coughlin}, J. and
+{Bell}, K. and {Berta-Thompson}, Z. and {Williams}, P. and
+{Dotson}, J. and {Barentsen}, G.},
+ eprint = {1812.013},
+ howpublished = {Astrophysics Source Code Library},
+ keywords = {Software, NASA},
+ month = {December},
+ title = {{Lightkurve: Kepler and TESS time series analysis in Python}},
+ year = {2018}
+}
+
+@article{Melis_2009,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2009ApJ...696.1964M},
+ archiveprefix = {arXiv},
+ author = {{Melis}, C. and {Zuckerman}, B. and {Song}, Inseok and {Rhee}, Joseph H. and {Metchev}, Stanimir},
+ doi = {10.1088/0004-637X/696/2/1964},
+ eprint = {0901.4360},
+ journal = {\apj},
+ keywords = {binaries: close, circumstellar matter, infrared: stars, stars: evolution, stars: individual: TYC 4144 329 1 TYC 4144 329 2, Astrophysics - Solar and Stellar Astrophysics},
+ month = {May},
+ number = {2},
+ pages = {1964-1971},
+ primaryclass = {astro-ph.SR},
+ title = {{A Substantial Dust Disk Surrounding an Actively Accreting First-Ascent Giant Star}},
+ volume = {696},
+ year = {2009}
 }
 
 @article{Pizzolato+2003,
@@ -999,52 +1046,3 @@ Todd},
  year = {2008}
 }
 
-@ARTICLE{Feinstein2019,
-       author = {{Feinstein}, Adina D. and {Montet}, Benjamin T. and {Foreman-Mackey}, Daniel and {Bedell}, Megan E. and {Saunders}, Nicholas and {Bean}, Jacob L. and {Christiansen}, Jessie L. and {Hedges}, Christina and {Luger}, Rodrigo and {Scolnic}, Daniel and {Cardoso}, Jos{\'e} Vin{\'\i}cius de Miranda},
-        title = "{eleanor: An Open-source Tool for Extracting Light Curves from the TESS Full-frame Images}",
-      journal = {\pasp},
-     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
-         year = 2019,
-        month = sep,
-       volume = {131},
-       number = {1003},
-        pages = {094502},
-          doi = {10.1088/1538-3873/ab291c},
-archivePrefix = {arXiv},
-       eprint = {1903.09152},
- primaryClass = {astro-ph.IM},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PASP..131i4502F},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@MISC{Brasseur2019,
-       author = {{Brasseur}, C.~E. and {Phillip}, Carlita and {Fleming}, Scott W. and {Mullally}, S.~E. and {White}, Richard L.},
-        title = "{Astrocut: Tools for creating cutouts of TESS images}",
-     keywords = {Software},
-         year = 2019,
-        month = may,
-          eid = {ascl:1905.007},
-        pages = {ascl:1905.007},
-archivePrefix = {ascl},
-       eprint = {1905.007},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ascl.soft05007B},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@MISC{lightkurve,
-   author = {{Lightkurve Collaboration} and {Cardoso}, J.~V.~d.~M. and
-             {Hedges}, C. and {Gully-Santiago}, M. and {Saunders}, N. and
-             {Cody}, A.~M. and {Barclay}, T. and {Hall}, O. and
-             {Sagear}, S. and {Turtelboom}, E. and {Zhang}, J. and
-             {Tzanidakis}, A. and {Mighell}, K. and {Coughlin}, J. and
-             {Bell}, K. and {Berta-Thompson}, Z. and {Williams}, P. and
-             {Dotson}, J. and {Barentsen}, G.},
-    title = "{Lightkurve: Kepler and TESS time series analysis in Python}",
- keywords = {Software, NASA},
-howpublished = {Astrophysics Source Code Library},
-     year = 2018,
-    month = dec,
-archivePrefix = "ascl",
-   eprint = {1812.013},
-   adsurl = {http://adsabs.harvard.edu/abs/2018ascl.soft12013L},
-}
